# opencv_contours

./: CMakeLists.txt  README.md  house_map-alt.pgm  house_map.pgm  main.cpp  main2.cpp  main3.cpp  my_map.pgm  my_map.xcf  my_map.yaml  sample.cpp
